Fixing 'New Game' option text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		 		<ul>
 		 			<li>
 		 				<a onclick="resetGame()">
-		 					<p id="reset-btn">RESET</p>
+		 					<p id="reset-btn">New game</p>
 		 				</a>
 		 			</li>
 		 			<li>
