Adding logic to try to predict the play of a player

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</ul>
 				<div id="playAgainBox">	
 					<button id="playAgain-btn" onclick="play()">
-						<p>Play Again</p>
+						<p>Play</p>
 					</button>
 				</div>
 			</div>				
