--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
 			 			<span id="player1ScoreName"></span>
 		 			</div>
 		 			<div class="score-box">
+		 				<div id="tieScore">0</div>
+			 			<span>Ties</span>
+		 			</div>
+		 			<div class="score-box">
 			 			<div id="player2Score">0</div>
 			 			<span id="player2ScoreName"></span>
 		 			</div>
