Modifying source file

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/RockPaperScissors.js"></script>
+  <script src="../main.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/RockPaperScissorsSpec.js"></script>
