Adding best of five game mode

--- a/index.html
+++ b/index.html
@@ -100,8 +100,13 @@
 		 		<h3 class="title">Menu</h3>
 		 		<ul>
 					<li>	
-						<a onclick="resetGame()">
+						<a onclick="resetGame(false)">
 							<p id="reset-btn">New Game</p>
+						</a>
+					</li>					
+					<li>	
+						<a onclick="switchGameMode(true)">
+							<p id="reset-btn">Best of Five (only Player vs. Computer)</p>
 						</a>
 					</li>
 					<li>	
