--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>	
+	<title>Rock, Paper, Scissors</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="assets/css/style.css" media="screen">
@@ -123,6 +124,6 @@
 		 	</div>
  	</div>
 	</div>
-	<script src="main.js"></script>
+	<script src="assets/javascript/main.js"></script>
 </body>
 </html>
